--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <header>
-
+        <h1 class="text-6xl">hunting</h1>
     </header>
 
     <main>
-        <h1>hunting</h1>
+        <section>
+            <div id="phoneContainer" class="grid grid-cols-1 grid-cols-2 gap-4">
+                
+              </div>
+        </section>
     </main>
 
     <footer>
