--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
         <h1 class="text-6xl">hunting</h1>
     </header>
 
-    <main>
-        <section>
-            <div id="phoneContainer" class="grid grid-cols-1 grid-cols-2 gap-4">
-                
+    <main class="mx-8 mt-8 ">
+        <section class="bg-gray-100 p-2">
+            <input type="text" placeholder="Type here" id="input" class="input input-bordered w-full max-w-xs" />
+            <button onclick="searchField()" class="btn btn-accent">Search</button>
+        </section>
+        <section >
+            <div id="phoneContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4 ">
               </div>
         </section>
     </main>
