--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
             <button onclick="searchField()" class="btn btn-accent">Search</button>
         </section>
         <section >
+            <div class="text-center my-52 hidden" id="loader">
+                <span class="loading loading-dots loading-lg "></span>
+            </div>
             <div id="phoneContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4 ">
+              </div>
+              <div>
+                <button id="show-all" class="btn btn-accent hidden">Show All</button>
+        </section>
               </div>
         </section>
     </main>
