--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
             <div id="phoneContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4 ">
               </div>
-              <div>
-                <button id="show-all" class="btn btn-accent hidden">Show All</button>
+              <div class="text-center">
+                <button onclick="showAllData()" id="show-all" class="btn btn-accent hidden  my-8">Show All</button>
         </section>
               </div>
         </section>
