--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
-<script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
     <header>
         <h1 class="text-6xl">hunting</h1>
@@ -17,17 +19,37 @@
             <input type="text" placeholder="Type here" id="input" class="input input-bordered w-full max-w-xs" />
             <button onclick="searchField()" class="btn btn-accent">Search</button>
         </section>
-        <section >
+        <section>
             <div class="text-center my-52 hidden" id="loader">
                 <span class="loading loading-dots loading-lg "></span>
             </div>
             <div id="phoneContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mt-4 ">
-              </div>
-              <div class="text-center">
+            </div>
+            <div class="text-center">
                 <button onclick="showAllData()" id="show-all" class="btn btn-accent hidden  my-8">Show All</button>
         </section>
-              </div>
+        </div>
         </section>
+
+        <div>
+            <!-- Open the modal using ID.showModal() method -->
+            
+            <dialog id="show_phone_details" class="modal modal-bottom sm:modal-middle">
+                <div class="modal-box">
+                    <h3 class="text-lg font-bold text-center my-6" id="header-phone"></h3>
+                   <div id="container-phone">
+                    
+                   </div>
+                    <div class="modal-action">
+                        <form method="dialog">
+                            <!-- if there is a button in form, it will close the modal -->
+                            <button class="btn">Close</button>
+                        </form>
+                    </div>
+                </div>
+            </dialog>
+        </div>
+
     </main>
 
     <footer>
@@ -35,4 +57,5 @@
     </footer>
 </body>
 <script src="JS/phone.js"></script>
+
 </html>
